Fixed binding issue on detail fragment Added navigation after adding a spice Converted all hardcoded text into string values

--- a/app/src/main/res/layout/spice_detail_fragment.xml
+++ b/app/src/main/res/layout/spice_detail_fragment.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/roboto"
-            android:text="Name:"
+            android:text="@string/name_label_text"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/name_text"
@@ -40,7 +40,7 @@
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:inputType="textPersonName"
-            android:text="@{spice.name}"
+            android:text="@={spice.name}"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/unit_text"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/roboto"
-            android:text="Unit:"
+            android:text="@string/unit_label_text"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/unit_text"
@@ -71,7 +71,7 @@
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:inputType="textAutoCorrect"
-            android:text="@{spice.unit}"
+            android:text="@={spice.unit}"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/volume_text"
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/roboto"
-            android:text="Volume:"
+            android:text="@string/volume_label_text"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/volume_text"
@@ -115,7 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/roboto"
-            android:text="Amount Used:"
+            android:text="@string/amount_used_label_text"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/used_text"
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/roboto"
-            android:text="Brand:"
+            android:text="@string/brand_label_text"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/brand_text"
@@ -158,7 +158,7 @@
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:inputType="textAutoCorrect"
-            android:text="@{spice.brand}"
+            android:text="@={spice.brand}"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/description_text"
@@ -173,7 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/roboto"
-            android:text="Description:"
+            android:text="@string/description_label_text"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/description_text"
@@ -187,7 +187,7 @@
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:inputType="textAutoCorrect"
-            android:text="@{spice.description}"
+            android:text="@={spice.description}"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -202,8 +202,8 @@
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:fontFamily="@font/roboto"
-            android:onClick="@{() -> spiceSharedViewModel.saveSpice(spice)}"
-            android:text="Save"
+            android:onClick="@{(view) -> spiceSharedViewModel.saveSpiceClick(view,spice)}"
+            android:text="@string/save_button_text"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -227,7 +227,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/save_spice_button"
-            app:layout_constraintVertical_bias="0.32999998" />
+            app:layout_constraintVertical_bias="0.32999998"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
