--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     >
-
+    <!-- Using constraint layout because the button needs to be dynamically positioned
+             in order to prevent it getting cut off -->
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/welcome_layout"
     android:layout_width="match_parent"
